--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.4.1",
+    "emailjs-com": "^2.4.1",
     "gatsby": "^2.20.12",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.3.1",
